force-app/main/default/objects/Case/fields/Account_clear_of_disputes_late_invoices__c.field-meta.xml
<CustomField>
    <fullName>Account_clear_of_disputes_late_invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account now clear of disputes and late invoices &gt; 30 days?</description>
    <inlineHelpText>Account now clear of disputes and late invoices &gt; 30 days?</inlineHelpText>
    <label>Account clear of disputes/late invoices?</label>
    <type>Checkbox</type>
</CustomField>