force-app/main/default/objects/Case/fields/Account_LOB__c.field-meta.xml
<CustomField>
    <fullName>Account_LOB__c</fullName>
    <description>Account LOB</description>
    <formula>TEXT(Account.LOB__c)</formula>
    <inlineHelpText>Account LOB</inlineHelpText>
    <label>Account LOB</label>
    <type>Text</type>
</CustomField>