force-app/main/default/objects/Case/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <description>Account Name(text)</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Text)</label>
    <type>Text</type>
</CustomField>