force-app/main/default/objects/Case/fields/Account_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_First_Name__c</fullName>
    <formula>LEFT(Account.Account_Owner_Name__c , FIND( &quot; &quot;, Account.Account_Owner_Name__c  ) -1 )</formula>
    <label>Account Owner First Name</label>
    <type>Text</type>
</CustomField>