force-app/main/default/objects/Case/fields/Action_3_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_3_Completed_Date__c</fullName>
    <label>Action 3 Completed Date</label>
    <type>Date</type>
</CustomField>