force-app/main/default/objects/Case/fields/Action_3_Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_3_Progress_Notes__c</fullName>
    <label>Action 3 Progress Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>