force-app/main/default/objects/Case/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Call Transfer</fullName>
            </value>
            <value>
                <fullName>Finance/Billing inquiry created</fullName>
            </value>
            <value>
                <fullName>Lead created</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product/Services information requested</fullName>
            </value>
            <value>
                <fullName>Services ticket created on behalf of customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>