force-app/main/default/objects/Case/fields/Add_MACC_SW_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Add_MACC_SW_Submitted__c</fullName>
    <label>Add: MACC SW $ Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>