force-app/main/default/objects/Case/fields/Additional_billings_adjustments__c.field-meta.xml
<CustomField>
    <fullName>Additional_billings_adjustments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were there additional billings, corrected pricing adjustments as a result of this audit?</description>
    <inlineHelpText>Were there additional billings, corrected pricing adjustments as a result of this audit?</inlineHelpText>
    <label>Additional billings/adjustments?</label>
    <type>Checkbox</type>
</CustomField>