force-app/main/default/objects/Case/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>Do you have any other comments about your conversations with this customer?</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>