force-app/main/default/objects/Case/fields/Additional_Opportunity_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Opportunity_Numbers__c</fullName>
    <inlineHelpText>Separate each Additional Opportunity Number with a semi-colon (&quot;;&quot;)</inlineHelpText>
    <label>Additional Opportunity Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>