force-app/main/default/objects/Case/fields/Addl_Info_Regarding_Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Addl_Info_Regarding_Issue_s__c</fullName>
    <inlineHelpText>Please provide additional information regarding the issue(s) mentioned by the customer.</inlineHelpText>
    <label>Addl Info Regarding Issue(s)</label>
    <type>TextArea</type>
</CustomField>