force-app/main/default/objects/Case/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case (Alternate Contact)</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>