force-app/main/default/objects/Case/fields/Alternate_Contact_Email1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Email1__c</fullName>
    <formula>Alternate_Contact__r.Email</formula>
    <label>Alternate Contact Email</label>
    <type>Text</type>
</CustomField>