force-app/main/default/objects/Case/fields/Alternate_Contact_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Phone1__c</fullName>
    <formula>Alternate_Contact__r.Phone</formula>
    <label>Alternate Contact Phone</label>
    <type>Text</type>
</CustomField>