force-app/main/default/objects/Case/fields/Annual_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Billing_Date__c</fullName>
    <description>This field will represent the Annual Billing Date for the Account</description>
    <inlineHelpText>The customer’s annual billing date can be found on the account view at the header level start date.</inlineHelpText>
    <label>Annual Billing Date</label>
    <type>Date</type>
</CustomField>