force-app/main/default/objects/Case/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>TEXT( Account.Area__c)</formula>
    <label>Area</label>
    <type>Text</type>
</CustomField>