force-app/main/default/objects/Case/fields/Area_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Concern__c</fullName>
    <inlineHelpText>Based on your follow-up conversations with this customer, please select the area(s) of concern. (Select all that apply.)</inlineHelpText>
    <label>Area of Concern</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware issue(s)</fullName>
            </value>
            <value>
                <fullName>Software issue(s)</fullName>
            </value>
            <value>
                <fullName>Sales Team complaint(s)</fullName>
            </value>
            <value>
                <fullName>Professional Services complaint(s)</fullName>
            </value>
            <value>
                <fullName>Support Services complaint(s)</fullName>
            </value>
            <value>
                <fullName>Delivery issue(s)</fullName>
            </value>
            <value>
                <fullName>Installation issue(s)</fullName>
            </value>
            <value>
                <fullName>Value concern(s)</fullName>
            </value>
            <value>
                <fullName>Invoicing issue(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>