force-app/main/default/objects/Case/fields/Asset_List__c.field-meta.xml
<CustomField>
    <fullName>Asset_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Asset List been attached?</description>
    <inlineHelpText>Has Asset List been attached?</inlineHelpText>
    <label>Asset List</label>
    <type>Checkbox</type>
</CustomField>