force-app/main/default/objects/Case/fields/Auto_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closing_Date__c</fullName>
    <description>Case will be auto closed after this date</description>
    <inlineHelpText>Case will be auto closed after this date</inlineHelpText>
    <label>Auto Closing Date</label>
    <type>Date</type>
</CustomField>