force-app/main/default/objects/Case/fields/Auto_Renewal_Account__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Renewal Account?</label>
    <type>Checkbox</type>
</CustomField>