force-app/main/default/objects/Case/fields/Auto_Response_Sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Response_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Response Sent</label>
    <type>Checkbox</type>
</CustomField>