force-app/main/default/objects/Case/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <label>Balance Due</label>
    <summarizedField>Dispute_Invoices__c.Balance_Due__c</summarizedField>
    <summaryForeignKey>Dispute_Invoices__c.Dispute__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>