force-app/main/default/objects/Case/fields/Billing_Project_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Project_Reason__c</fullName>
    <label>Billing Project Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer need</fullName>
            </value>
            <value>
                <fullName>Internal determination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>