force-app/main/default/objects/Case/fields/Billing_requested__c.field-meta.xml
<CustomField>
    <fullName>Billing_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If invoice not received as a result of being billed, has it been requested to be billed?</description>
    <inlineHelpText>If invoice not received as a result of being billed, has it been requested to be billed?</inlineHelpText>
    <label>Billing requested?</label>
    <type>Checkbox</type>
</CustomField>