force-app/main/default/objects/Case/fields/Call_Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>Call_Transferred_To__c</fullName>
    <label>Call Transferred To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>