force-app/main/default/objects/Case/fields/Cancel_MACC_HW_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Cancel_MACC_HW_Submitted__c</fullName>
    <label>Cancel: MACC HW $ Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>