force-app/main/default/objects/Case/fields/Cancel_SOM_Total_SW_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Cancel_SOM_Total_SW_Submitted__c</fullName>
    <label>Cancel: SOM Total SW $ Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>