force-app/main/default/objects/Case/fields/Case_Assignment_Lock__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Assignment Lock</label>
    <type>Checkbox</type>
</CustomField>