force-app/main/default/objects/Case/fields/Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Reason__c</fullName>
    <description>1. The choice Fx Action(s) Migrated to Project applies if the time to resolve exceeds 30 business days.
2. The choice Resolution Requires Long-Term Project applies if the time to resolve exceeds 30 business days.</description>
    <label>Case Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolution Action Completed</fullName>
            </value>
            <value>
                <fullName>All Fx Resolution(s) Completed</fullName>
            </value>
            <value>
                <fullName>Fx Action(s) Migrated to Project</fullName>
            </value>
            <value>
                <fullName>No Fx Action(s) Required</fullName>
            </value>
            <value>
                <fullName>Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Issue will not be resolved</fullName>
            </value>
            <value>
                <fullName>Resolution Requires Long-term Project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Follow Up Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>