force-app/main/default/objects/Case/fields/Case_Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Source__c</fullName>
    <label>Case Creation Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>