force-app/main/default/objects/Case/fields/Case_Received__c.field-meta.xml
<CustomField>
    <fullName>Case_Received__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Case Received</label>
    <type>DateTime</type>
</CustomField>