force-app/main/default/objects/Case/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <inlineHelpText>Use for Detractor, Immediate and CX Case Types.</inlineHelpText>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detractor Alert</fullName>
            </value>
            <value>
                <fullName>Immediate Alert</fullName>
            </value>
            <value>
                <fullName>CX Alert</fullName>
                <default>true</default>
                <label>CX Action</label>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>