force-app/main/default/objects/Case/fields/Case_Transferred_Between_Queue_Groups__c.field-meta.xml
<CustomField>
    <fullName>Case_Transferred_Between_Queue_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Transferred Between Queue Groups</label>
    <type>Checkbox</type>
</CustomField>