force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Options to identify that concern is related to which functionality.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANTIQUE CASH REGISTERS</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
            </value>
            <value>
                <fullName>CHARITIES/GIVING</fullName>
            </value>
            <value>
                <fullName>COUNTERPOINT</fullName>
            </value>
            <value>
                <fullName>Co-Op</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>DRIVERS AND PATCHES</fullName>
            </value>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
            <value>
                <fullName>Deal Registration Costa-Rica</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>EULA Submission</fullName>
            </value>
            <value>
                <fullName>EH&amp;S</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>FEDEX OR SHIPPING</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Global Security</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>HR - Careers</fullName>
            </value>
            <value>
                <fullName>HR - Employee</fullName>
            </value>
            <value>
                <fullName>HR-EMPLOYMENT VERIFICATION</fullName>
            </value>
            <value>
                <fullName>HR-W2’S</fullName>
            </value>
            <value>
                <fullName>HWM</fullName>
            </value>
            <value>
                <fullName>Iconex</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>