force-app/main/default/objects/Case/fields/Category_DRT__c.field-meta.xml
<CustomField>
    <fullName>Category_DRT__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Receivable</fullName>
            </value>
            <value>
                <fullName>ACCOUNTS PAYABLE</fullName>
            </value>
            <value>
                <fullName>ANTIQUE CASH REGISTERS</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
            </value>
            <value>
                <fullName>CHARITIES/GIVING</fullName>
            </value>
            <value>
                <fullName>COUNTERPOINT</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>DRIVERS AND PATCHES</fullName>
            </value>
            <value>
                <fullName>EH&amp;S</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>FEDEX OR SHIPPING</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Global Security</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>HR - Careers</fullName>
            </value>
            <value>
                <fullName>HR - Employee</fullName>
            </value>
            <value>
                <fullName>HR-EMPLOYMENT VERIFICATION</fullName>
            </value>
            <value>
                <fullName>HR-W2’S</fullName>
            </value>
            <value>
                <fullName>Iconex</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Investor Relations</fullName>
            </value>
            <value>
                <fullName>IT Help Desk</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>MyNCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>