force-app/main/default/objects/Case/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>