force-app/main/default/objects/Case/fields/CCAD_Dispute_Nbr__c.field-meta.xml
<CustomField>
    <fullName>CCAD_Dispute_Nbr__c</fullName>
    <description>This is the dispute number assigned when a dispute is created in CCAD.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the dispute number assigned when a dispute is created in CCAD.</inlineHelpText>
    <label>CCAD Dispute Nbr</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>