force-app/main/default/objects/Case/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Change for MACC?</description>
    <inlineHelpText>Is this a Change for MACC?</inlineHelpText>
    <label>Change?</label>
    <type>Checkbox</type>
</CustomField>