force-app/main/default/objects/Case/fields/Chat_User_Company__c.field-meta.xml
<CustomField>
    <fullName>Chat_User_Company__c</fullName>
    <label>Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>