force-app/main/default/objects/Case/fields/Chat_User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Chat_User_First_Name__c</fullName>
    <label>First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>