force-app/main/default/objects/Case/fields/Chat_User_Industry__c.field-meta.xml
<CustomField>
    <fullName>Chat_User_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>