force-app/main/default/objects/Case/fields/Chat_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Chat_User_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>